fixed hotizontal overflow

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -32,3 +32,10 @@ body,
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+body {
+  width: 100vw;
+  display: flex;
+  flex-flow: column wrap;
+  overflow-x: hidden;
+}
